--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,9 +18,19 @@ body {
   color: $grayishBlue;
   line-height: 1.3;
 
+  @include breakpoint-up(large) {
+    font-size: $font-lg;
+  }
+
   &.noscroll {
     overflow: hidden;
   }
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0px;
 }
 
 a,
@@ -32,8 +42,42 @@ a:hover {
 
 // Spacing
 .container {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  max-width: 69.375rem;
+  margin: 0 auto;
+
+  // Helper classes to control padding for each side
+  &--padding-all {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+
+  &--padding-vertical {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+
+  &--padding-horizontal {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+
+  &--padding-top {
+    padding-top: 2.25rem;
+  }
+
+  &--padding-right {
+    padding-right: 1.5rem;
+  }
+
+  &--padding-left {
+    padding-left: 2.25rem;
+  }
+
+  &--padding-bottom {
+    padding-bottom: 1.5rem;
+  }
 }
 
 // Flexbox
@@ -63,6 +107,12 @@ button,
   border-radius: 3.125rem;
   border: 0;
   cursor: pointer;
+  font-size: $font-small;
+  transition: opacity 300ms ease-in-out;
+
+  &:hover {
+    opacity: 0.75;
+  }
 }
 
 // Visibility
