--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,3 +10,5 @@ $white: hsl(0, 0%, 100%);
 // Font Sizes
 $font-small: 0.875rem; // 16px;
 $font-med: 1.125rem; // 18px
+$font-lg: 1.25rem;
+$font-xlg: 3.25rem;
