--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,9 +17,10 @@ body {
   font-weight: 300;
   color: $grayishBlue;
   line-height: 1.3;
+  overflow-x: hidden;
 
   @include breakpoint-up(large) {
-    font-size: $font-lg;
+    font-size: $font-med;
   }
 
   &.noscroll {
@@ -27,10 +28,38 @@ body {
   }
 }
 
+// Text
 h1,
 h2,
 h3 {
+  font-weight: 300;
+  line-height: 1.15;
+  color: $darkBlue;
   margin-top: 0px;
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+
+  @include breakpoint-up(large) {
+    font-size: $font-xlg;
+  }
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+
+  @include breakpoint-up(large) {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
 }
 
 a,
@@ -47,15 +76,25 @@ a:hover {
 
   // Helper classes to control padding for each side
   &--padding-all {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
     padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
     padding-left: 1.5rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
 
   &--padding-vertical {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
 
   &--padding-horizontal {
@@ -64,19 +103,26 @@ a:hover {
   }
 
   &--padding-top {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+    }
   }
 
   &--padding-right {
     padding-right: 1.5rem;
   }
 
-  &--padding-left {
-    padding-left: 2.25rem;
+  &--padding-bottom {
+    padding-bottom: 4.375rem;
+    @include breakpoint-up(large) {
+      padding-bottom: 6rem;
+    }
   }
 
-  &--padding-bottom {
-    padding-bottom: 1.5rem;
+  &--padding-left {
+    padding-left: 1.5rem;
   }
 }
 
