--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -19,11 +19,12 @@ body {
   font-weight: 300;
   color: #9698a6;
   line-height: 1.3;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
   body {
-    font-size: 1.25rem;
+    font-size: 1.125rem;
   }
 }
 
@@ -34,7 +35,38 @@ body.noscroll {
 h1,
 h2,
 h3 {
+  font-weight: 300;
+  line-height: 1.15;
+  color: #2d314d;
   margin-top: 0px;
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 64em) {
+  h1 {
+    font-size: 3.25rem;
+  }
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+}
+
+@media (min-width: 64em) {
+  h2 {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
 }
 
 a,
@@ -50,15 +82,29 @@ a:hover {
 }
 
 .container--padding-all {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
+  padding-top: 4.375rem;
   padding-right: 1.5rem;
+  padding-bottom: 4.375rem;
   padding-left: 1.5rem;
 }
 
+@media (min-width: 64em) {
+  .container--padding-all {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+
 .container--padding-vertical {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
+  padding-top: 4.375rem;
+  padding-bottom: 4.375rem;
+}
+
+@media (min-width: 64em) {
+  .container--padding-vertical {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
 }
 
 .container--padding-horizontal {
@@ -67,19 +113,31 @@ a:hover {
 }
 
 .container--padding-top {
-  padding-top: 2.25rem;
+  padding-top: 4.375rem;
+}
+
+@media (min-width: 64em) {
+  .container--padding-top {
+    padding-top: 6rem;
+  }
 }
 
 .container--padding-right {
   padding-right: 1.5rem;
 }
 
-.container--padding-left {
-  padding-left: 2.25rem;
+.container--padding-bottom {
+  padding-bottom: 4.375rem;
 }
 
-.container--padding-bottom {
-  padding-bottom: 1.5rem;
+@media (min-width: 64em) {
+  .container--padding-bottom {
+    padding-bottom: 6rem;
+  }
+}
+
+.container--padding-left {
+  padding-left: 1.5rem;
 }
 
 .flex {
@@ -417,5 +475,82 @@ button:hover,
             order: 1;
     text-align: left;
   }
+}
+
+.feature {
+  background-color: #f3f4f6;
+  text-align: center;
+}
+
+@media (min-width: 40em) {
+  .feature {
+    text-align: left;
+  }
+}
+
+@media (min-width: 64em) {
+  .feature__intro {
+    width: 60%;
+    margin-bottom: 3.75rem;
+  }
+}
+
+@media (min-width: 40em) {
+  .feature__grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.feature__item {
+  padding: 0.9375rem;
+}
+
+@media (min-width: 40em) {
+  .feature__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+  }
+}
+
+@media (min-width: 64em) {
+  .feature__item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+}
+
+.feature__icon {
+  margin-bottom: 1.875rem;
+}
+
+@media (min-width: 64em) {
+  .feature__icon {
+    margin-bottom: 2.75rem;
+  }
+}
+
+.feature__title {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.15;
+  color: #2d314d;
+}
+
+@media (min-width: 64em) {
+  .feature__title {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
+.feature__description {
+  font-size: 0.875rem;
+  line-height: 1.5;
 }
 /*# sourceMappingURL=style.css.map */
