--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -406,7 +406,7 @@ button:hover::before {
 
 .hero__image {
   position: relative;
-  background-image: url("./images/bg-intro-mobile.svg");
+  background-image: url("https://grzegorzbors.github.io/frontend-mentor-easybank-landing/images/bg-intro-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -438,7 +438,7 @@ button:hover::before {
     content: "";
     position: absolute;
     height: 100%;
-    background-image: url("./images/bg-intro-desktop.svg");
+    background-image: url("https://grzegorzbors.github.io/frontend-mentor-easybank-landing/images/bg-intro-desktop.svg");
     background-repeat: no-repeat;
     background-position: center bottom;
     width: 150%;
@@ -452,7 +452,7 @@ button:hover::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("./images/image-mockups.png");
+  background-image: url("https://grzegorzbors.github.io/frontend-mentor-easybank-landing/images/image-mockups.png");
   background-size: 93%;
   background-repeat: no-repeat;
   background-position: center bottom;
